--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/fengpeng/p2p#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.1.2"
+    "express-ws": "^5.0.2"
   }
 }
